--- a/courses.html
+++ b/courses.html
@@ -41,75 +41,76 @@
 <!-- MAIN -->
 <main class="courses-page">
 
-  <section class="intro fade-in-section">
-    <h2>TOP-PICKS TOPICS</h2>
-    <p>Below are the courses I've completed as part of my education at SLCC.</p>
-  </section>
+<section class="intro fade-in-section">
+  <h2>Top-Picks Topics</h2>
+  <p>Below are the courses I've completed as part of my education at SLCC.</p>
+</section>
 
-  <section class="courses-grid">
+<section class="courses-grid">
 
-  <a href="ai.html" class="course-card fade-in-section">
-    <img src="images/american_institutions.png" alt="American Institutions (AI)">
+  <!-- Clickable course cards -->
+  <a href="american-institutions.html" class="course-card fade-in-section" style="grid-column: 1 / span 2; grid-row: 1 / span 2;">
+    <img src="images/american_institutions.png" alt="American Institutions">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
   </a>
 
-  <a href="cm.html" class="course-card fade-in-section">
-    <img src="images/communication.png" alt="Communication (CM)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Communication (CM)</h3></div>
-  </a>
-
-  <a href="ql.html" class="course-card fade-in-section">
-    <img src="images/quantitative_literacy.png" alt="Quantitative Literacy (QL)">
+  <a href="quantitative-literacy.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 1;">
+    <img src="images/quantitative_literacy.png" alt="Quantitative Literacy">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
   </a>
 
-  <a href="en.html" class="course-card fade-in-section">
-    <img src="images/composition.png" alt="Composition (EN)">
+  <a href="composition.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 2;">
+    <img src="images/composition.png" alt="Composition">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Composition (EN)</h3></div>
   </a>
 
-  <a href="lw.html" class="course-card fade-in-section">
-    <img src="images/lifelong_wellness.png" alt="Lifelong Wellness (LW)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
-  </a>
-
-  <a href="ig.html" class="course-card fade-in-section">
-    <img src="images/international_global.png" alt="International & Global (IG)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>International & Global (IG)</h3></div>
-  </a>
-
-  <a href="ls.html" class="course-card fade-in-section">
-    <img src="images/life_science.png" alt="Life Science (LS)">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Life Science (LS)</h3></div>
-  </a>
-
-  <a href="fa.html" class="course-card fade-in-section">
-    <img src="images/course2.png" alt="Fine Arts (FA)">
+  <a href="fine-arts.html" class="course-card fade-in-section" style="grid-column: 1; grid-row: 3;">
+    <img src="images/course2.png" alt="Fine Arts">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
   </a>
 
-  <a href="ss.html" class="course-card fade-in-section">
-    <img src="images/social_science.png" alt="Social Science (SS)">
+  <a href="communication.html" class="course-card fade-in-section" style="grid-column: 2; grid-row: 3;">
+    <img src="images/communication.png" alt="Communication">
     <div class="overlay"></div>
-    <div class="text-overlay"><h3>Social Science (SS)</h3></div>
+    <div class="text-overlay"><h3>Communication (CM)</h3></div>
   </a>
 
-  <a href="ps.html" class="course-card fade-in-section">
-    <img src="images/physical_science.png" alt="Physical Science (PS)">
+  <a href="international-global.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 3;">
+    <img src="images/international_global.png" alt="International and Global">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>International & Global (IG)</h3></div>
+  </a>
+
+  <a href="lifelong-wellness.html" class="course-card fade-in-section" style="grid-column: 1; grid-row: 4;">
+    <img src="images/lifelong_wellness.png" alt="Lifelong Wellness">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
+  </a>
+
+  <a href="life-science.html" class="course-card fade-in-section" style="grid-column: 2; grid-row: 4;">
+    <img src="images/life_science.png" alt="Life Science">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Life Science (LS)</h3></div>
+  </a>
+
+  <a href="physical-science.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 4;">
+    <img src="images/physical_science.png" alt="Physical Science">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
   </a>
 
-  <a href="hu.html" class="course-card fade-in-section">
-    <img src="images/course1.png" alt="Humanities (HU)">
+  <a href="social-science.html" class="course-card fade-in-section" style="grid-column: 1; grid-row: 5;">
+    <img src="images/social_science.png" alt="Social Science">
+    <div class="overlay"></div>
+    <div class="text-overlay"><h3>Social Science (SS)</h3></div>
+  </a>
+
+  <a href="humanities.html" class="course-card fade-in-section" style="grid-column: 2 / span 2; grid-row: 5 / span 2;">
+    <img src="images/course1.png" alt="Humanities">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Humanities (HU)</h3></div>
   </a>
@@ -125,43 +126,41 @@
 
 <!-- SCRIPTS -->
 <script>
-function toggleMenu() {
-  const mobileNav = document.getElementById('mobile-nav');
-  const hamburgerIcon = document.getElementById('hamburger-menu');
-  const body = document.body;
+  function toggleMenu() {
+    const mobileNav = document.getElementById('mobile-nav');
+    const hamburgerIcon = document.getElementById('hamburger-menu');
+    const body = document.body;
 
-  mobileNav.classList.toggle('active');
-  hamburgerIcon.classList.toggle('is-active');
+    mobileNav.classList.toggle('active');
+    hamburgerIcon.classList.toggle('is-active');
 
-  if (mobileNav.classList.contains('active')) {
-    body.classList.add('no-scroll');
-  } else {
-    body.classList.remove('no-scroll');
+    if (mobileNav.classList.contains('active')) {
+      body.classList.add('no-scroll');
+    } else {
+      body.classList.remove('no-scroll');
+    }
   }
-}
 </script>
 
 <script>
-document.addEventListener('DOMContentLoaded', function() {
-  const faders = document.querySelectorAll('.fade-in-section');
-
-  const appearOptions = {
-    threshold: 0.15,  // smoother scroll trigger
-  };
-
-  const appearOnScroll = new IntersectionObserver(function(entries, appearOnScroll) {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
+  document.addEventListener('DOMContentLoaded', function() {
+    const faders = document.querySelectorAll('.fade-in-section');
+    const appearOptions = {
+      threshold: 0.15,
+      rootMargin: "0px 0px -50px 0px"
+    };
+    const appearOnScroll = new IntersectionObserver(function(entries, appearOnScroll) {
+      entries.forEach(entry => {
+        if (!entry.isIntersecting) return;
         entry.target.classList.add('is-visible');
         appearOnScroll.unobserve(entry.target);
-      }
-    });
-  }, appearOptions);
+      });
+    }, appearOptions);
 
-  faders.forEach(fader => {
-    appearOnScroll.observe(fader);
+    faders.forEach(fader => {
+      appearOnScroll.observe(fader);
+    });
   });
-});
 </script>
 
 </body>
