--- a/courses.html
+++ b/courses.html
@@ -38,7 +38,7 @@
   <a href="personal-projects.html">Personal Projects</a>
 </div>
 
-<!-- MAIN -->
+<!-- MAIN CONTENT -->
 <main class="courses-page">
 
 <section class="intro fade-in-section">
@@ -48,14 +48,14 @@
 
 <section class="courses-grid">
 
-  <!-- Clickable course cards -->
-  <a href="american-institutions.html" class="course-card fade-in-section" style="grid-column: 1 / span 2; grid-row: 1 / span 2;">
+  <!-- Correctly Linked Course Cards -->
+  <a href="american_institution.html" class="course-card fade-in-section" style="grid-column: 1 / span 2; grid-row: 1 / span 2;">
     <img src="images/american_institutions.png" alt="American Institutions">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
   </a>
 
-  <a href="quantitative-literacy.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 1;">
+  <a href="quantitative_literacy.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 1;">
     <img src="images/quantitative_literacy.png" alt="Quantitative Literacy">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
@@ -67,7 +67,7 @@
     <div class="text-overlay"><h3>Composition (EN)</h3></div>
   </a>
 
-  <a href="fine-arts.html" class="course-card fade-in-section" style="grid-column: 1; grid-row: 3;">
+  <a href="fine_arts.html" class="course-card fade-in-section" style="grid-column: 1; grid-row: 3;">
     <img src="images/course2.png" alt="Fine Arts">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
@@ -79,31 +79,31 @@
     <div class="text-overlay"><h3>Communication (CM)</h3></div>
   </a>
 
-  <a href="international-global.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 3;">
+  <a href="international_global.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 3;">
     <img src="images/international_global.png" alt="International and Global">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>International & Global (IG)</h3></div>
   </a>
 
-  <a href="lifelong-wellness.html" class="course-card fade-in-section" style="grid-column: 1; grid-row: 4;">
+  <a href="lifelong_wellness.html" class="course-card fade-in-section" style="grid-column: 1; grid-row: 4;">
     <img src="images/lifelong_wellness.png" alt="Lifelong Wellness">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
   </a>
 
-  <a href="life-science.html" class="course-card fade-in-section" style="grid-column: 2; grid-row: 4;">
+  <a href="life_science.html" class="course-card fade-in-section" style="grid-column: 2; grid-row: 4;">
     <img src="images/life_science.png" alt="Life Science">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Life Science (LS)</h3></div>
   </a>
 
-  <a href="physical-science.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 4;">
+  <a href="physical_science.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 4;">
     <img src="images/physical_science.png" alt="Physical Science">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
   </a>
 
-  <a href="social-science.html" class="course-card fade-in-section" style="grid-column: 1; grid-row: 5;">
+  <a href="social_science.html" class="course-card fade-in-section" style="grid-column: 1; grid-row: 5;">
     <img src="images/social_science.png" alt="Social Science">
     <div class="overlay"></div>
     <div class="text-overlay"><h3>Social Science (SS)</h3></div>
@@ -124,7 +124,7 @@
   <p>© 2025 Jesús Lopez Aguilar. All rights reserved.</p>
 </footer>
 
-<!-- SCRIPTS -->
+<!-- JS SCRIPTS -->
 <script>
   function toggleMenu() {
     const mobileNav = document.getElementById('mobile-nav');
