--- a/courses.html
+++ b/courses.html
@@ -41,81 +41,81 @@
 <!-- MAIN CONTENT -->
 <main class="courses-page">
 
-<section class="intro fade-in-section">
-  <h2>Top-Picks Topics</h2>
-  <p>Below are the courses I've completed as part of my education at SLCC.</p>
-</section>
+  <section class="intro fade-in-section">
+    <h2>Top-Picks Topics</h2>
+    <p>Below are the courses I've completed as part of my education at SLCC.</p>
+  </section>
 
-<section class="courses-grid">
+  <section class="courses-grid">
 
-  <!-- Correctly Linked Course Cards -->
-  <a href="american_institution.html" class="course-card fade-in-section" style="grid-column: 1 / span 2; grid-row: 1 / span 2;">
-    <img src="images/american_institutions.png" alt="American Institutions">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
-  </a>
+    <!-- Course Cards -->
+    <a href="american_institutions.html" class="course-card fade-in-section" style="grid-column: 1 / span 2; grid-row: 1 / span 2;">
+      <img src="images/american_institutions.png" alt="American Institutions">
+      <div class="overlay"></div>
+      <div class="text-overlay"><h3>American Institutions (AI)</h3></div>
+    </a>
 
-  <a href="quantitative_literacy.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 1;">
-    <img src="images/quantitative_literacy.png" alt="Quantitative Literacy">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
-  </a>
+    <a href="quantitative_literacy.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 1;">
+      <img src="images/quantitative_literacy.png" alt="Quantitative Literacy">
+      <div class="overlay"></div>
+      <div class="text-overlay"><h3>Quantitative Literacy (QL)</h3></div>
+    </a>
 
-  <a href="composition.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 2;">
-    <img src="images/composition.png" alt="Composition">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Composition (EN)</h3></div>
-  </a>
+    <a href="composition.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 2;">
+      <img src="images/composition.png" alt="Composition">
+      <div class="overlay"></div>
+      <div class="text-overlay"><h3>Composition (EN)</h3></div>
+    </a>
 
-  <a href="fine_arts.html" class="course-card fade-in-section" style="grid-column: 1; grid-row: 3;">
-    <img src="images/course2.png" alt="Fine Arts">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
-  </a>
+    <a href="fine_arts.html" class="course-card fade-in-section" style="grid-column: 1; grid-row: 3;">
+      <img src="images/course2.png" alt="Fine Arts">
+      <div class="overlay"></div>
+      <div class="text-overlay"><h3>Fine Arts (FA)</h3></div>
+    </a>
 
-  <a href="communication.html" class="course-card fade-in-section" style="grid-column: 2; grid-row: 3;">
-    <img src="images/communication.png" alt="Communication">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Communication (CM)</h3></div>
-  </a>
+    <a href="communication.html" class="course-card fade-in-section" style="grid-column: 2; grid-row: 3;">
+      <img src="images/communication.png" alt="Communication">
+      <div class="overlay"></div>
+      <div class="text-overlay"><h3>Communication (CM)</h3></div>
+    </a>
 
-  <a href="international_global.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 3;">
-    <img src="images/international_global.png" alt="International and Global">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>International & Global (IG)</h3></div>
-  </a>
+    <a href="international_global.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 3;">
+      <img src="images/international_global.png" alt="International & Global">
+      <div class="overlay"></div>
+      <div class="text-overlay"><h3>International & Global (IG)</h3></div>
+    </a>
 
-  <a href="lifelong_wellness.html" class="course-card fade-in-section" style="grid-column: 1; grid-row: 4;">
-    <img src="images/lifelong_wellness.png" alt="Lifelong Wellness">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
-  </a>
+    <a href="lifelong_wellness.html" class="course-card fade-in-section" style="grid-column: 1; grid-row: 4;">
+      <img src="images/lifelong_wellness.png" alt="Lifelong Wellness">
+      <div class="overlay"></div>
+      <div class="text-overlay"><h3>Lifelong Wellness (LW)</h3></div>
+    </a>
 
-  <a href="life_science.html" class="course-card fade-in-section" style="grid-column: 2; grid-row: 4;">
-    <img src="images/life_science.png" alt="Life Science">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Life Science (LS)</h3></div>
-  </a>
+    <a href="life_science.html" class="course-card fade-in-section" style="grid-column: 2; grid-row: 4;">
+      <img src="images/life_science.png" alt="Life Science">
+      <div class="overlay"></div>
+      <div class="text-overlay"><h3>Life Science (LS)</h3></div>
+    </a>
 
-  <a href="physical_science.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 4;">
-    <img src="images/physical_science.png" alt="Physical Science">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
-  </a>
+    <a href="physical_science.html" class="course-card fade-in-section" style="grid-column: 3; grid-row: 4;">
+      <img src="images/physical_science.png" alt="Physical Science">
+      <div class="overlay"></div>
+      <div class="text-overlay"><h3>Physical Science (PS)</h3></div>
+    </a>
 
-  <a href="social_science.html" class="course-card fade-in-section" style="grid-column: 1; grid-row: 5;">
-    <img src="images/social_science.png" alt="Social Science">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Social Science (SS)</h3></div>
-  </a>
+    <a href="social_science.html" class="course-card fade-in-section" style="grid-column: 1; grid-row: 5;">
+      <img src="images/social_science.png" alt="Social Science">
+      <div class="overlay"></div>
+      <div class="text-overlay"><h3>Social Science (SS)</h3></div>
+    </a>
 
-  <a href="humanities.html" class="course-card fade-in-section" style="grid-column: 2 / span 2; grid-row: 5 / span 2;">
-    <img src="images/course1.png" alt="Humanities">
-    <div class="overlay"></div>
-    <div class="text-overlay"><h3>Humanities (HU)</h3></div>
-  </a>
+    <a href="humanities.html" class="course-card fade-in-section" style="grid-column: 2 / span 2; grid-row: 5 / span 2;">
+      <img src="images/course1.png" alt="Humanities">
+      <div class="overlay"></div>
+      <div class="text-overlay"><h3>Humanities (HU)</h3></div>
+    </a>
 
-</section>
+  </section>
 
 </main>
 
@@ -124,7 +124,7 @@
   <p>© 2025 Jesús Lopez Aguilar. All rights reserved.</p>
 </footer>
 
-<!-- JS SCRIPTS -->
+<!-- SCRIPTS -->
 <script>
   function toggleMenu() {
     const mobileNav = document.getElementById('mobile-nav');
@@ -145,10 +145,12 @@
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     const faders = document.querySelectorAll('.fade-in-section');
+
     const appearOptions = {
       threshold: 0.15,
-      rootMargin: "0px 0px -50px 0px"
+      rootMargin: "0px 0px -100px 0px"
     };
+
     const appearOnScroll = new IntersectionObserver(function(entries, appearOnScroll) {
       entries.forEach(entry => {
         if (!entry.isIntersecting) return;
