--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 
     <main>
         <div class="name-center fade-in-section">
-            <h1>Welcome to my SLCC ePortfolio: General Education!</h1>
-            <h2>Crafted by: Jesús Lopez Aguilar and his 7 other mood swings.</h2>
-            <p>Here you’ll find my work, reflection, and life throughout my academic and personal journey.</p>
-            <p>This will reflect the work I crafted from scratch, so if there’s an error... don’t tell me, I’ll go insane.</p>
+            <h1>Welcome to my ePortfolio.</h1>
+            <h2>This site was crafted by Jesús Lopez Aguilar, stitched together by seven mood swings, fueled by Adderall, delusion, ambition, and everything nice.</h2>
+            <p>This space means everything. I coded it by hand, and it took longer than it takes cartoons to finish a Tallis drawing for inmates — and with far less emotional stability.</p>
+            <p>Feel free to look around. If you find a bug (on the site or crawling near you), do yourself a favor and keep it to yourself.</p>
+            <p>I don't tolerate bugs. Digital or real. Either one will send me into a full mental spiral and I will not recover gracefully.</p>
+            <p>You’ve been warned. Enjoy the chaos.</p>
             <a href="before-we-begin.html" class="button">Let's Explore</a>
         </div>
     </main> <footer>
