--- a/before-we-begin.html
+++ b/before-we-begin.html
@@ -39,9 +39,11 @@
 
     <div class="before-we-begin fade-in-section">
         <h1>Before We Begin...</h1>
-        <p>Welcome to my ePortfolio! This is where I share my academic journey and personal projects. But before diving into my work, here's a quick intro:</p>
-        <p>As you explore, keep in mind that this ePortfolio is a reflection of my experiences, achievements, and the ups and downs of creating this website from scratch. If something goes wrong, please don’t mention it... my inner perfectionist might break down!</p>
-        <p>Ready to explore my work and journey? Click below to proceed!</p>
+        <p>Please note: all images used throughout this website are AI-generated with references photos, unless otherwise stated.</p>
+        <p>And while you're here, please try not to break anything.</p>
+        <p>I also want to thank the people who helped me brainstorm ideas when I couldn't commit to a layout (this is my third full script)</p>
+        <p>Special thanks to Katie Cervantes Castillo, Julia Zavala Serrato, Stacy Alvarado Aguilar - and my dog, for the emotional support. </p>
+        <p>Thank you for visiting and taking the time to explore this work.</p>
         <a href="about.html" class="button">Proceed to ePortfolio</a>
     </div>
     <footer>
