--- a/about.html
+++ b/about.html
@@ -1,113 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Me - Jesús Lopez Aguilar</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About Me - Jesús Lopez Aguilar</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-    <nav>
-         <div class="nav-container">
-            <ul id="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html" class="active-nav-link">About Me</a></li> <li><a href="courses.html">Courses</a></li>
-                <li><a href="achievements.html">Achievements</a></li>
-                <li><a href="projects.html">Personal Projects</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
-        <div></div>
-        <div></div>
-        <div></div>
+  <!-- NAVIGATION -->
+  <nav>
+    <div class="nav-container">
+      <ul id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html" class="active-nav-link">About Me</a></li>
+        <li><a href="courses.html">Courses</a></li>
+        <li><a href="achievements.html">Achievements</a></li>
+        <li><a href="personal-projects.html">Personal Projects</a></li>
+      </ul>
     </div>
+  </nav>
 
-    <div class="mobile-nav" id="mobile-nav">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Me</a>
-        <a href="courses.html">Courses</a>
-        <a href="achievements.html">Achievements</a>
-        <a href="projects.html">Personal Projects</a>
-    </div>
+  <!-- HAMBURGER MENU -->
+  <div class="hamburger-menu" id="hamburger-menu" onclick="toggleMenu()">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
 
+  <div class="mobile-nav" id="mobile-nav">
+    <a href="index.html">Home</a>
+    <a href="about.html" class="link-active-glow">About Me</a>
+    <a href="courses.html">Courses</a>
+    <a href="achievements.html">Achievements</a>
+    <a href="personal-projects.html">Personal Projects</a>
+  </div>
+
+  <!-- MAIN CONTENT -->
+  <main>
     <div class="before-we-begin fade-in-section">
-        <h1>About Me</h1>
-        <p>I am Jesús Lopez Aguilar, a student at SLCC studying Criminal Justice and Nursing Practice. I love blending forensic science and healthcare together in my education and future goals!</p>
-        <a href="courses.html" class="button">Explore My Courses</a>
+      <h1>About Me</h1>
+      <p>
+You made it to this page. Hey. My name is Jesús Antonio Lopez Aguilar. I’m currently attending Salt Lake Community College, majoring in Criminal Justice. I’m part of the SLCC Honors Program, where I plan to grow academically and advance beyond my time here. In addition to my studies at SLCC, I’m also pursuing a second major through Joyce University of Nursing and Health Sciences, working toward my degree in Nursing Practice. My future goals include earning a Doctorate in Nursing Practice (DNP) and a degree in Medical Forensics. My hope is to work in law enforcement and forensic investigation.
+      </p>
+      <p>
+But before all that ambition came survival. Unlike my relatives who hold Green Cards like exclusive backstage passes, or my people who walk around with legal status like it's a house key, I didn’t get that. Ever heard of the GOLD Card? Not from Sephora. I mean the one Trump introduced, a five-million-dollar VIP fast-pass to citizenship. Yeah, no. I didn’t have that. I didn’t even get the wrapper. What I got was the starter pack: U.S. citizenship, terms and conditions very much included. Not a golden immigration status, but a system that took half my check like Uncle Sam was the one helping me pin down a screaming toddler mid-IV. (These kids are strong.)
+      </p>
+      <p>
+I was born on April 16th, 2006. An Easter baby. And I just know someone in my family was mad that I chose Easter Sunday for my grand entrance. I was born and raised in Salt Lake City, Utah, in an immigrant household I could never imagine replacing. Miriam Aguilar and Sergio Lopez, my parents, came from Mexico to give me and my brother a better life. More opportunity. More room to breathe. That’s why I’m here. Writing this. And why you’re reading it. While we're both sitting in our chairs.
+      </p>
+      <p>
+Coming from Mexican heritage? Oh boy. I grew up in that household, the one where your mom runs a full-blown urgent care clinic using only VapoRub, a bottle of 7UP, apple soda, and mineral water. Upset stomach? Vomiting? Too bad. You’re drinking one of those. And the love language? Casual roast battles, sarcasm, threats, and emotional damage with a side of tortillas.
+      </p>
+      <p>
+But watching my little sister grow up has been its own comedy special. She talks back, rolls her eyes, lets out a whole “UGHGH,” and walks away untouched. Me? In her same situation, a whole TV would’ve flown. 200mph. Clean shot. And I’d just be sitting there like… wow. Evolution.
+      </p>
+      <p>
+We live in a modern neighborhood now, a bigger house. Pros and cons? Oh, definitely a pro for my mom, she can now throw household appliances across much longer distances, like it’s an Olympic sport. She yells our names knowing the echo will make all of us immediately sink into our beds.
+      </p>
+      <p>
+And the stereotypes? Yeah, they check out. Bulk beer at every baby shower or birthday party? Accurate. But why is there more beer than juice or water? Somehow the budget always makes room for tequila. Meanwhile, I was in the corner struggling with my Capri Sun.
+      </p>
+      <p>
+In high school, I worked at Best Buy as a sales advisor. After that, I stayed in customer service. I’ve seen things. From uncensored phone photos to customers asking me which computer is best for watching porn. I was 17. It was traumatic, but hey, that’s customer service!
+      </p>
+      <p>
+And the moment people find out I speak Spanish, when they hear me and tell me I sound "Mexican" or "Colombian" (whatever that means) — it’s never boring. It’s my culture, my life. But yes, sometimes people make Spanish their "kink." It’s weird. 
+      </p>
+      <p>
+During high school, I also tangled with the juvenile justice system. Placed under probation and court-monitored, I still graduated high school despite everything. I took therapy seriously, stayed out of trouble, got diagnosed with ADHD, and that’s when everything changed.
+      </p>
+      <p>
+I got the diagnosis. I got medication. I started fixing my life. Reading court documents, insurance forms, medical paperwork — all the stuff immigrant families are never taught — and that’s when I realized I wanted to do more. 
+      </p>
+      <p>
+Add in a little trauma, heartbreak, social media drama, and a sprinkle of amphetamine salts, and that’s me. 
+      </p>
+      <p>
+Now? I’m a double major honors student. Criminal Justice. Nursing. Heading toward Forensics. Honors Program. No one handed it to me. I earned it.
+      </p>
+      <p>
+But I left out one important detail: I am absolutely terrified of bugs.
+Tiny spider? Fine. An inch long? Nope. Lease yours now. Ladybug flying at me? Goodbye.
+      </p>
+      <p>
+Welcome to my life. Told through rolled tortillas, court slips, prescribed Adderall, and enough chaos to make it interesting. This is me — raw and real.
+      </p>
     </div>
-    <footer>
-        <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
-    </footer>
+  </main>
 
-    <script>
-        // Function to toggle the mobile menu, body scroll lock, AND hamburger animation class
-        function toggleMenu() {
-            const mobileNav = document.getElementById('mobile-nav');
-            const hamburgerIcon = document.getElementById('hamburger-menu'); // Get the hamburger icon
-            const body = document.body;
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 Jesús Lopez Aguilar. All rights reserved.</p>
+  </footer>
 
-            mobileNav.classList.toggle('active');
-            hamburgerIcon.classList.toggle('is-active'); // Toggle hamburger animation class
+  <!-- JS SCRIPTS -->
+  <script>
+    function toggleMenu() {
+      const mobileNav = document.getElementById('mobile-nav');
+      const hamburgerIcon = document.getElementById('hamburger-menu');
+      const body = document.body;
 
-            if (mobileNav.classList.contains('active')) {
-                body.classList.add('no-scroll');
-            } else {
-                body.classList.remove('no-scroll');
-            }
-        }
+      mobileNav.classList.toggle('active');
+      hamburgerIcon.classList.toggle('is-active');
 
-        // --- Touch Event Listeners for Mobile Glow ---
-        document.querySelectorAll('.mobile-nav a').forEach(link => {
-            let touchInitiated = false;
-            link.addEventListener('touchstart', function(event) {
-                this.classList.add('link-active-glow');
-                touchInitiated = true;
-            });
-            link.addEventListener('touchend', function() {
-                if (touchInitiated) {
-                    setTimeout(() => { this.classList.remove('link-active-glow'); }, 150);
-                }
-                touchInitiated = false;
-            });
-            link.addEventListener('touchcancel', function() {
-                 if (touchInitiated) { this.classList.remove('link-active-glow'); }
-                 touchInitiated = false;
-            });
-            link.addEventListener('click', () => {
-                const mobileNav = document.getElementById('mobile-nav');
-                const hamburgerIcon = document.getElementById('hamburger-menu'); // Need hamburger here too
-                if (mobileNav.classList.contains('active')) {
-                    mobileNav.classList.remove('active');
-                    hamburgerIcon.classList.remove('is-active'); // Ensure hamburger resets if link clicked
-                    document.body.classList.remove('no-scroll');
-                }
-                setTimeout(() => { if (link.classList.contains('link-active-glow')) { link.classList.remove('link-active-glow'); } }, 150);
-                 touchInitiated = false;
-            });
-        }); // Added missing closing parenthesis
+      if (mobileNav.classList.contains('active')) {
+        body.classList.add('no-scroll');
+      } else {
+        body.classList.remove('no-scroll');
+      }
+    }
+  </script>
 
-        // --- Intersection Observer for Scroll Animations ---
-        const observerOptions = {
-          root: null, rootMargin: '0px', threshold: 0.1
-        };
-        const observerCallback = (entries, observer) => {
-          entries.forEach(entry => {
-            if (entry.isIntersecting) {
-              entry.target.classList.add('is-visible');
-              observer.unobserve(entry.target);
-            }
-          });
-        };
-        const observer = new IntersectionObserver(observerCallback, observerOptions);
-        const targets = document.querySelectorAll('.fade-in-section');
-        targets.forEach(target => observer.observe(target));
-        // --- End Intersection Observer ---
-    </script>
-    </body>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const faders = document.querySelectorAll('.fade-in-section');
+      const appearOptions = { threshold: 0.15 };
+
+      const appearOnScroll = new IntersectionObserver(function (entries, observer) {
+        entries.forEach(entry => {
+          if (!entry.isIntersecting) return;
+          entry.target.classList.add('is-visible');
+          observer.unobserve(entry.target);
+        });
+      }, appearOptions);
+
+      faders.forEach(fader => {
+        appearOnScroll.observe(fader);
+      });
+    });
+  </script>
+
+</body>
 </html>
