--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 
   <!-- MAIN CONTENT -->
   <main>
-    <div class="before-we-begin fade-in-section">
+    <section class="about-wrapper fade-in-section">
       <h1>About Me</h1>
       <p>
 You made it to this page. Hey. My name is Jesús Antonio Lopez Aguilar. I’m currently attending Salt Lake Community College, majoring in Criminal Justice. I’m part of the SLCC Honors Program, where I plan to grow academically and advance beyond my time here. In addition to my studies at SLCC, I’m also pursuing a second major through Joyce University of Nursing and Health Sciences, working toward my degree in Nursing Practice. My future goals include earning a Doctorate in Nursing Practice (DNP) and a degree in Medical Forensics. My hope is to work in law enforcement and forensic investigation.
@@ -87,7 +87,7 @@ Tiny spider? Fine. An inch long? Nope. Lease yours now. Ladybug flying at me? Go
       <p>
 Welcome to my life. Told through rolled tortillas, court slips, prescribed Adderall, and enough chaos to make it interesting. This is me — raw and real.
       </p>
-    </div>
+    </section>
   </main>
 
   <!-- FOOTER -->
