--- a/about.html
+++ b/about.html
@@ -39,56 +39,38 @@
 
   <!-- MAIN CONTENT -->
   <main>
-    <section class="about-wrapper fade-in-section">
-      <h1>About Me</h1>
-      <p>
-You made it to this page. Hey. My name is Jesús Antonio Lopez Aguilar. I’m currently attending Salt Lake Community College, majoring in Criminal Justice. I’m part of the SLCC Honors Program, where I plan to grow academically and advance beyond my time here. In addition to my studies at SLCC, I’m also pursuing a second major through Joyce University of Nursing and Health Sciences, working toward my degree in Nursing Practice. My future goals include earning a Doctorate in Nursing Practice (DNP) and a degree in Medical Forensics. My hope is to work in law enforcement and forensic investigation.
-      </p>
-      <p>
-But before all that ambition came survival. Unlike my relatives who hold Green Cards like exclusive backstage passes, or my people who walk around with legal status like it's a house key, I didn’t get that. Ever heard of the GOLD Card? Not from Sephora. I mean the one Trump introduced, a five-million-dollar VIP fast-pass to citizenship. Yeah, no. I didn’t have that. I didn’t even get the wrapper. What I got was the starter pack: U.S. citizenship, terms and conditions very much included. Not a golden immigration status, but a system that took half my check like Uncle Sam was the one helping me pin down a screaming toddler mid-IV. (These kids are strong.)
-      </p>
-      <p>
-I was born on April 16th, 2006. An Easter baby. And I just know someone in my family was mad that I chose Easter Sunday for my grand entrance. I was born and raised in Salt Lake City, Utah, in an immigrant household I could never imagine replacing. Miriam Aguilar and Sergio Lopez, my parents, came from Mexico to give me and my brother a better life. More opportunity. More room to breathe. That’s why I’m here. Writing this. And why you’re reading it. While we're both sitting in our chairs.
-      </p>
-      <p>
-Coming from Mexican heritage? Oh boy. I grew up in that household, the one where your mom runs a full-blown urgent care clinic using only VapoRub, a bottle of 7UP, apple soda, and mineral water. Upset stomach? Vomiting? Too bad. You’re drinking one of those. And the love language? Casual roast battles, sarcasm, threats, and emotional damage with a side of tortillas.
-      </p>
-      <p>
-But watching my little sister grow up has been its own comedy special. She talks back, rolls her eyes, lets out a whole “UGHGH,” and walks away untouched. Me? In her same situation, a whole TV would’ve flown. 200mph. Clean shot. And I’d just be sitting there like… wow. Evolution.
-      </p>
-      <p>
-We live in a modern neighborhood now, a bigger house. Pros and cons? Oh, definitely a pro for my mom, she can now throw household appliances across much longer distances, like it’s an Olympic sport. She yells our names knowing the echo will make all of us immediately sink into our beds.
-      </p>
-      <p>
-And the stereotypes? Yeah, they check out. Bulk beer at every baby shower or birthday party? Accurate. But why is there more beer than juice or water? Somehow the budget always makes room for tequila. Meanwhile, I was in the corner struggling with my Capri Sun.
-      </p>
-      <p>
-In high school, I worked at Best Buy as a sales advisor. After that, I stayed in customer service. I’ve seen things. From uncensored phone photos to customers asking me which computer is best for watching porn. I was 17. It was traumatic, but hey, that’s customer service!
-      </p>
-      <p>
-And the moment people find out I speak Spanish, when they hear me and tell me I sound "Mexican" or "Colombian" (whatever that means) — it’s never boring. It’s my culture, my life. But yes, sometimes people make Spanish their "kink." It’s weird. 
-      </p>
-      <p>
-During high school, I also tangled with the juvenile justice system. Placed under probation and court-monitored, I still graduated high school despite everything. I took therapy seriously, stayed out of trouble, got diagnosed with ADHD, and that’s when everything changed.
-      </p>
-      <p>
-I got the diagnosis. I got medication. I started fixing my life. Reading court documents, insurance forms, medical paperwork — all the stuff immigrant families are never taught — and that’s when I realized I wanted to do more. 
-      </p>
-      <p>
-Add in a little trauma, heartbreak, social media drama, and a sprinkle of amphetamine salts, and that’s me. 
-      </p>
-      <p>
-Now? I’m a double major honors student. Criminal Justice. Nursing. Heading toward Forensics. Honors Program. No one handed it to me. I earned it.
-      </p>
-      <p>
-But I left out one important detail: I am absolutely terrified of bugs.
-Tiny spider? Fine. An inch long? Nope. Lease yours now. Ladybug flying at me? Goodbye.
-      </p>
-      <p>
-Welcome to my life. Told through rolled tortillas, court slips, prescribed Adderall, and enough chaos to make it interesting. This is me — raw and real.
-      </p>
-    </section>
-  </main>
+  <section class="about-me-content fade-in-section">
+    <h1>About Me</h1>
+
+    <p>You made it to this page. Hey. My name is Jesús Antonio Lopez Aguilar. I’m currently attending Salt Lake Community College, majoring in Criminal Justice. I’m part of the SLCC Honors Program, where I plan to grow academically and advance beyond my time here. In addition to my studies at SLCC, I’m also pursuing a second major through Joyce University of Nursing and Health Sciences, working toward my degree in Nursing Practice. My future goals include earning a Doctorate in Nursing Practice (DNP) and a degree in Medical Forensics. My hope is to work in law enforcement and forensic investigation.</p>
+
+    <p>But before all that ambition came survival. Unlike my relatives who hold Green Cards like exclusive backstage passes, or my people who walk around with legal status like it's a house key, I didn’t get that. Ever heard of the GOLD Card? Not from Sephora. I mean the one Trump introduced, a five-million-dollar VIP fast-pass to citizenship. Yeah, no. I didn’t have that. I didn’t even get the wrapper. What I got was the starter pack: U.S. citizenship, terms and conditions very much included.</p>
+
+    <p>I was born on April 16th, 2006. An Easter baby. And I just know someone in my family was mad that I chose Easter Sunday for my grand entrance. I was born and raised in Salt Lake City, Utah, in an immigrant household I could never imagine replacing. Miriam Aguilar and Sergio Lopez, my parents, came from Mexico to give me and my brother a better life. More opportunity. More room to breathe. That’s why I’m here. Writing this. And why you’re reading it.</p>
+
+    <p>Coming from Mexican heritage? Oh boy. I grew up in that household, the one where your mom runs a full-blown urgent care clinic using only VapoRub, a bottle of 7UP, apple soda, and mineral water. Upset stomach? Vomiting? Too bad. You’re drinking one of those. And the love language? Casual roast battles, sarcasm, threats, and emotional damage with a side of tortillas. Usually, insurance is something we don't use, but we have, emergencies only. That insurance card is not getting touched unless you're bleeding. Not just light bleeding. Dripping.</p>
+
+    <p>But watching my little sister grow up has been its own comedy special. She talks back, rolls her eyes, lets out a whole “UGHGH,” and walks away untouched. Me? In her same situation, a whole TV would’ve flown. 200mph. Clean shot. And I’d just be sitting there like… wow. Evolution.</p>
+
+    <p>We live in a modern neighborhood now, a bigger house. Pros and cons? Oh, definitely a pro for my mom, she can now throw household appliances across much longer distances, like it’s an Olympic sport. She yells our names knowing the echo will make all of us immediately sink into our beds. Not me though. Jokes on you, I already left the moment you said my name in that tone.</p>
+
+    <p>And the stereotypes? Yeah, they check out. Bulk beer at every baby shower or birthday party? Accurate. But why is there more beer than juice or water? I'm pretty sure it's more expensive. Somehow the budget always makes room for tequila. I just sit there wondering how people can drink cans of beer all day and still eat like nothing. Me? I get full off water.</p>
+
+    <p>“¡Para arriba, para abajo, pa' la izquierda, pa' la derecha, pa'l centro, y pa' adentro!” the sacred ritual before taking a shot. Not me though. I was the one going feral in the corner because the Capri Sun pouch didn’t have a straw. Or worse, it did, and I stabbed straight through it. Now I’m holding a leaking pouch, contemplating my existence.</p>
+
+    <p>In high school, I worked at Best Buy. I’ve seen things. From uncensored photos to someone asking what computer is best for watching porn. I was 17. Customers would come up with cracked Galaxy phones and flash Google Translate at me. I'd go, “Buenas, yo hablo español,” and suddenly they’re like “¡¿Por qué no dijiste nada?!” Sir. You didn’t even ask.</p>
+
+    <p>Some people thought I was Asian. Others said I sounded Colombian. And I get that. My accent lives rent-free. I’m proud of it. But I’ve been tempted to say “my dog pissed on me” in Spanish just to throw people off. Or list every STD I know with a Sofia Vergara accent. Just for fun. Just for science.</p>
+
+    <p>Then came the hard part: juvenile probation. I was placed in Alternative Juvenile Detention. Monitored. Watched. Booked if I slipped up. But it saved me. Counseling saved me. I got diagnosed with ADHD. And Adderall gave me structure. It made me productive. It helped me fight for the future I wanted.</p>
+
+    <p>Now I’m a double major in college. I know where I’m headed. Law. Medicine. Service. But I’ve also been shaped by trauma. Heartbreak. Social media drama. A little bit of court. And a sprinkle of amphetamine salts.</p>
+
+    <p>And I’m still scared of bugs. Don’t care what kind. If it’s bigger than a pencil eraser, the lease is theirs.</p>
+
+    <p>This is my story. Written in tortillas, court slips, prescriptions, trauma, and drive. It’s me. Raw and real.</p>
+  </section>
+</main>
 
   <!-- FOOTER -->
   <footer>
